mosquitto/mqtt.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
    kubernetes.io/name: "mosquitto"
spec:
  selector:
    app: mosquitto
  type: NodePort
  ports:
  - name: mosquitto
    port: 1883
    targetPort: 1883
    nodePort: 31883
  # - name: mosquitto-web
  #   port: 9001
  #   targetPort: 9001
  #   nodePort: 31880
