mosquitto/mqtt.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mqtt-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec: 
  rules:
  - http:
      paths:
      - path: /mqtt
        backend:
          serviceName: mosquitto
          servicePort: 1883    
  # - http:
  #     paths:
  #     - path: /mqtt-web
  #       backend:
  #         serviceName: mosquitto-web
  #         servicePort: 9001
